<resources>
    <string name="app_name">Irregular Verbs</string>
    <string name="exam">Exam</string>
    <string name="list">List</string>
    <string name="flascard">Flashcard</string>
    <string name="image">Image</string>
    <string name="most50">Most 50</string>
    <string name="plus50">Plus 50</string>
    <string name="pro">Pro</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level">Level %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="text_dialog">You completed this level.Do you want to reset your level progress?</string>
    <string name="v2">v2</string>
    <string name="v3">v3</string>
    <string name="v2_text">Simple Past(V2)</string>
    <string name="v3_text">Past Participle(V3)</string>
    <string name="text_error">Wrong! Correct answer:</string>

    <string name="text_answer"> \"%1$s\"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>