<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:background="@color/greyBack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/exam_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MenuTextStyle"
            android:text="@string/exam" />

        <Button
            android:id="@+id/list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MenuTextStyle"
            android:text="@string/list" />

        <Button
            android:id="@+id/image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MenuTextStyle"
            android:text="@string/image" />

        <Button
            android:id="@+id/flascard_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/MenuTextStyle"
            android:text="@string/flascard" />

    </LinearLayout>
</ScrollView>